# skyweave

./: .gitignore  .gitmodules  QUICKSTART.md  README.md  SPEC_MVP.md  VISUALIZER_SUMMARY.md  pyproject.toml
.claude/: plan.md
Aerovision/: SPEC_MVP.md
configs/: intrinsics_cam2.yaml  intrinsics_cam3.yaml  sim.yaml  sim_05_numba.yaml  sim_075.yaml  sim_mvp_ov9281_100hz_03cam_perimeter_numba.yaml  sim_mvp_ov9281_100hz_05cam_perimeter_numba.yaml  sim_numba.yaml  (+6 more)
v1/: .gitignore  README.md  SPEC_MVP.md  pyproject.toml
v1/configs/: extrinsics.yaml  intrinsics_cam1.yaml  real_charuco_ov9281_30hz_numba.yaml  sim.yaml  sim_05.yaml  sim_mvp_ov9281_100hz_075_numba.yaml  sim_mvp_ov9281_100hz_09cam_perimeter_numba.yaml  sim_mvp_ov9281_100hz_13cam_perimeter_numba.yaml  sim_mvp_ov9281_100hz_15cam_perimeter_numba.yaml  sim_mvp_ov9281_100hz_numba.yaml  sim_perturb_false_positive.yaml  sim_perturb_pixel_noise.yaml
v1/data/golden/: peak_baselines.json
v1/docs/: CODEBASE_ANALYSIS.md  CUDA_DETECTOR_DESIGN.md  RV1106_EDGE_NODE.md  THROUGHPUT_30FPS_JETSON.md  viz-data-contract.md
v1/docs/conversations/: 2026-05-28-architecture-review.md
v1/docs/specs/: system-spec-high-level.md
v1/scripts/: generate_golden_peaks.py  rubik_perf_sweep.py
v1/src/skyweave/: log.py
v1/src/skyweave/calibration/: charuco_capture_preview.py  charuco_live_server.py  charuco_live_state.py  extrinsics.py
v1/src/skyweave/camera/: __init__.py  check_parallel.py  check_runtime.py  motion.py  source.py
v1/src/skyweave/cli/: autotune.py  camera_check.py  charuco_capture.py  charuco_intrinsics.py  charuco_live.py  operator.py  viz_export.py
v1/src/skyweave/fusion/: __init__.py  aligner.py  triangulator.py
v1/src/skyweave/operator/: __init__.py  calibration.py  runtime.py  state.py  viz.py
v1/src/skyweave/rayweave/: dda.py  grid.py  numba_scorer.py
v1/src/skyweave/recording/: __init__.py  replayer.py
v1/src/skyweave/sim/: __init__.py  benchmark.py
v1/src/skyweave/transport/: __init__.py
v1/src/skyweave/viz/: demo.py  exporter.py
v1/tests/: test_benchmark.py  test_calibration_targets.py  test_charuco_capture.py  test_charuco_extrinsics.py  test_charuco_intrinsics.py  test_config.py  test_geom.py  test_grid_dda.py  test_messages.py  test_peaks.py  test_recording.py  test_rendered_sim.py  test_synthetic_pipeline.py
v1/viz_web/: README.md  index.html
v1/viz_web/src/: main.js
v1/viz_web/src/data/: wsclient.js
v1/viz_web/src/renderer/: fov-coverage.js  grid.js  rays.js  voxels.js
v1/viz_web/src/ui/: ui-manager.js
(+89 files in other folders)
