[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skyweave"
version = "0.1.0"
description = "Packet-level synthetic MVP core for Skyweave Rayweave tracking."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "msgpack>=1.0.7",
  "filterpy>=1.4.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
numba = [
  "numba>=0.61",
]

[project.scripts]
skyweave-sim-check = "skyweave.cli.sim_check:main"
skyweave-replay = "skyweave.cli.replay:main"
skyweave-benchmark = "skyweave.cli.benchmark:main"
skyweave-viz-export = "skyweave.cli.viz_export:main"
skyweave-camera-check = "skyweave.cli.camera_check:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
