[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skyweave"
version = "0.1.0"
description = "Packet-level synthetic MVP core for Skyweave Rayweave tracking."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "msgpack>=1.0.7",
  "filterpy>=1.4.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
numba = [
  "numba>=0.61",
]
camera = [
  "opencv-contrib-python-headless>=4.9",
]
viz = [
  "aiohttp>=3.9",
]

[project.scripts]
skyweave-sim-check = "skyweave.cli.sim_check:main"
skyweave-autotune = "skyweave.cli.autotune:main"
skyweave-replay = "skyweave.cli.replay:main"
skyweave-benchmark = "skyweave.cli.benchmark:main"
skyweave-viz-export = "skyweave.cli.viz_export:main"
skyweave-viz-demo = "skyweave.viz.demo:run"
skyweave-camera-check = "skyweave.cli.camera_check:main"
skyweave-live-benchmark = "skyweave.cli.live_benchmark:main"
skyweave-charuco-check = "skyweave.cli.charuco_check:main"
skyweave-charuco-live = "skyweave.cli.charuco_live:main"
skyweave-camera-inventory = "skyweave.cli.camera_inventory:main"
skyweave-charuco-capture = "skyweave.cli.charuco_capture:main"
skyweave-charuco-intrinsics = "skyweave.cli.charuco_intrinsics:main"
skyweave-charuco-extrinsics = "skyweave.cli.charuco_extrinsics:main"
skyweave-operator = "skyweave.cli.operator:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
